--- a/nette-nginx.conf
+++ b/nette-nginx.conf
@@ -19,7 +19,7 @@ http {
         root /home/dundee/workspace/php7-python-bench/nette/www;
 
         index index.php;
-        
+
         location / {
             try_files $uri $uri/ /index.php?$args;
 	}
@@ -27,6 +27,8 @@ http {
         location ~ \.php$ {
             try_files $uri =404;
             fastcgi_param  REQUEST_METHOD     $request_method;
+            fastcgi_param  QUERY_STRING       $query_string;
+            fastcgi_param  REQUEST_URI        $request_uri;
             fastcgi_pass   unix:./php-fpm.sock;
             fastcgi_index  index.php;
             fastcgi_param  SCRIPT_FILENAME    $document_root$fastcgi_script_name;
