--- a/flask-nginx.conf
+++ b/flask-nginx.conf
@@ -21,6 +21,8 @@ http {
 
         location / {
             uwsgi_param     REQUEST_METHOD          $request_method;
+            uwsgi_param     REQUEST_URI             $request_uri;
+            uwsgi_param     QUERY_STRING            $query_string;
             uwsgi_param     PATH_INFO               $document_uri;
             uwsgi_pass unix:./uwsgi.sock;
 	}
