--- a/flask-nginx.conf
+++ b/flask-nginx.conf
@@ -2,14 +2,14 @@ worker_processes  1;
 daemon off;
 
 error_log stderr;
-pid /home/dundee/workspace/php7-python-bench/nginx.pid;
+pid /home/dundee/work/php7-python-bench/nginx.pid;
 
 events {
     worker_connections  1024;
 }
 
 http {
-    access_log /home/dundee/workspace/php7-python-bench/nginx.log;
+    access_log /home/dundee/work/php7-python-bench/nginx.log;
 
     keepalive_timeout  65;
 
@@ -17,7 +17,12 @@ http {
         listen       127.0.0.1:9000;
         server_name  localhost;
 
-        root /home/dundee/workspace/php7-python-bench/flask;
+        root /home/dundee/work/php7-python-bench/flask;
+
+        client_body_temp_path /home/dundee/work/php7-python-bench/temp/body;
+        fastcgi_temp_path /home/dundee/work/php7-python-bench/temp/fastcgi;
+        uwsgi_temp_path /home/dundee/work/php7-python-bench/temp/uwsgi;
+        scgi_temp_path /home/dundee/work/php7-python-bench/temp/scgi;
 
         location / {
             uwsgi_param     REQUEST_METHOD          $request_method;
