--- a/slim-nginx.conf
+++ b/slim-nginx.conf
@@ -2,21 +2,26 @@ worker_processes  1;
 daemon off;
 
 error_log stderr;
-pid /home/dundee/workspace/php7-python-bench/nginx.pid;
+pid /home/dundee/work/php7-python-bench/nginx.pid;
 
 events {
     worker_connections  1024;
 }
 
 http {
-    access_log /home/dundee/workspace/php7-python-bench/nginx.log;
+    access_log /home/dundee/work/php7-python-bench/nginx.log;
 
     keepalive_timeout  65;
     server {
         listen       127.0.0.1:9000;
         server_name  localhost;
 
-        root /home/dundee/workspace/php7-python-bench/slim;
+        root /home/dundee/work/php7-python-bench/slim;
+
+        client_body_temp_path /home/dundee/work/php7-python-bench/temp/body;
+        fastcgi_temp_path /home/dundee/work/php7-python-bench/temp/fastcgi;
+        uwsgi_temp_path /home/dundee/work/php7-python-bench/temp/uwsgi;
+        scgi_temp_path /home/dundee/work/php7-python-bench/temp/scgi;
 
         index index.php;
 
